hphp/hack/test/typecheck/lambda/variadics/lambda_unpacked_parameters.php.exp
File "lambda_unpacked_parameters.php", line 11, characters 14-24:
Invalid argument (Typing[4110])
  File "lambda_unpacked_parameters.php", line 11, characters 14-24:
  This is an object of type Traversable (it is unpacked with '...')
  File "lambda_unpacked_parameters.php", line 9, characters 17-17:
  It is incompatible with an int
File "lambda_unpacked_parameters.php", line 15, characters 14-14:
Invalid argument (Typing[4110])
  File "lambda_unpacked_parameters.php", line 14, characters 28-29:
  This is a string (variadic argument)
  File "lambda_unpacked_parameters.php", line 15, characters 14-14:
  It is incompatible with an int
File "lambda_unpacked_parameters.php", line 47, characters 12-13:
Was expecting an object but type is unknown (Typing[4297])
  File "lambda_unpacked_parameters.php", line 46, characters 18-19:
  It is unknown because a type could not be determined here
